[WEB-38] fixed alignment for Learn more button on third section of home page

--- a/src/components/SectionThree.css
+++ b/src/components/SectionThree.css
@@ -4,7 +4,7 @@
 
 div.s3Feat{
     background-color: #dfbea6;
-    margin-bottom: 3em;
+    margin-bottom: 1.5em;
 }
 
 div.s3Feat1{
